src/objects/Interaction__c.object
<CustomObject>
    <description>Interaction Log and Staging Object</description>
    <fields>
        <fullName>ACT_Test_Results__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>Data from ACT. Should be loaded from the &quot;ACT Summary&quot; of the ACT Parser Excel document.</description>
        <label>ACT Test Results</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Academic_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The official plan or program the individual applies for. A lookup to Program with a filter criteria of Record Type = Academic Program.</description>
        <inlineHelpText>The official plan or program the individual applies for.</inlineHelpText>
        <label>Academic Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Academic Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Interactions (Academic Program)</relationshipLabel>
        <relationshipName>Academic_Program_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Academic_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The academic term a prospect is interested in. Used to build the Opportunity Key for the Interaction Processor to determine whether to create a new Opportunity or update an existing Opportunity.</description>
        <inlineHelpText>The academic term a prospect is interested in.</inlineHelpText>
        <label>Academic Term</label>
        <referenceTo>Academic_Term__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActSix_ApplicationID__c</fullName>
        <label>ACT Six Application ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActSix_status_field__c</fullName>
        <label>ActSix status field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Finalist</fullName>
                </value>
                <value>
                    <fullName>Scholar</fullName>
                </value>
                <value>
                    <fullName>Former Inquiry</fullName>
                </value>
                <value>
                    <fullName>Former Applicant</fullName>
                </value>
                <value>
                    <fullName>Former Finalist</fullName>
                </value>
                <value>
                    <fullName>Former Scholar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Campaign_Key__c</fullName>
        <description>Specifies the Additional Campaign that should be connected to the additional Campaign Member created by this Interaction. If available, it uses the Interaction &quot;Campaign Reference ID&quot; field, otherwise it uses the &quot;Campaign Reference ID&quot; from the associated Additional Campaign.</description>
        <formula>IF(ISBLANK(Additional_Campaign_Reference_ID__c),CASESAFEID(Additional_Campaign__r.Campaign_Key__c),Additional_Campaign_Reference_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Campaign Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Campaign_Member_Status__c</fullName>
        <description>The status that should be set on the Campaign Member created for the Additional Campaign. It must match an available status from the Additional Campaign, and it cannot be blank.</description>
        <inlineHelpText>Set the status for the Campaign Member created from the Additional Campaign.</inlineHelpText>
        <label>Additional Campaign Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Campaign_Reference_ID__c</fullName>
        <description>An external ID to match to the Additional Campaign. It must either match an existing campaign&apos;s Campaign Reference ID, or a campaign&apos;s Salesforce ID. If filled out, it populates the Interaction &quot;Additional Campaign Key&quot; formula field.</description>
        <label>Additional Campaign Reference ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The secondary campaign (event, marketing effort, etc.) connected to this Interaction. When the Additional Campaign Member Status field is also set, a Campaign Member will be created for the individual.</description>
        <inlineHelpText>Set the secondary campaign (event, marketing effort, etc.) connected to this Interaction to create another Campaign Member.</inlineHelpText>
        <label>Additional Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Additional_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admit_Type__c</fullName>
        <description>The category the potential applicant falls into for recruitment segmentation (Ex: New student, Transfer student, etc.)</description>
        <inlineHelpText>Select the type of student for recruitment segmentation.</inlineHelpText>
        <label>Admit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Student</fullName>
                </value>
                <value>
                    <fullName>Transfer Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliated_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organizational account (Ex: business, high school, college, etc.) a student is affiliated with. This field along with the Affiliation Role, Affiliation Status, and Primary Affiliation fields creates an Affiliation to the Contact. Filtered to exclude the Administrative Account Record Type.</description>
        <inlineHelpText>Select the organizational account (Ex: business, high school, college, etc.) the individual is affiliated with.</inlineHelpText>
        <label>Affiliated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliation_Key__c</fullName>
        <description>If there is an Affiliated Account specified, this formula returns the value: &quot;.Affiliation_Account__r.Id&quot; and the Interaction Processor prepends Contact.Id to match on the Upsert Key field on Affiliation.</description>
        <formula>IF(ISBLANK(Affiliated_Account__c), &quot;&quot;,
&quot;.&quot;+CASESAFEID(Affiliated_Account__r.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliation Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliation_Role__c</fullName>
        <description>The Contact&apos;s position for the Affiliated Account. If this field is left blank, the default Role for the Account Record Type will be used, if one is indicated in HEDA Settings, otherwise the Role will be blank.</description>
        <inlineHelpText>The Contact&apos;s relationship to the Affiliated Account.</inlineHelpText>
        <label>Affiliation Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affiliation_Status__c</fullName>
        <description>The status of the Contact&apos;s affiliation to the Affiliated Account. Defaulted to &quot;Current.&quot;</description>
        <inlineHelpText>The status of the Contact&apos;s affiliation to the Affiliated Account.</inlineHelpText>
        <label>Affiliation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>The age displayed is as of interaction create date.  The age does not update over time.</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Academic_Interests__c</fullName>
        <description>A coma separated list of Academic Interests, from RFI Forms, Tell Me More cards, etc.</description>
        <label>All Academic Interests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anyone_in_Family_Attended_Bethel__c</fullName>
        <label>Anyone in Family Attended Bethel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <description>The external ID used by the application collection tool or database for matching to Applicant Opportunities.</description>
        <inlineHelpText>The external ID used by the application collection tool or database for matching to Applicant Opportunities.</inlineHelpText>
        <label>Application Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used as part of the application creation process</description>
        <inlineHelpText>Used as part of the application creation process</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Reason__c</fullName>
        <description>Lists the errors returned when the Interaction Processor fails and the Interaction Status is set to Audit Needed.</description>
        <label>Audit Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Banner_ID__c</fullName>
        <label>Banner ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CASPA_ID__c</fullName>
        <label>CASPA ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEEB_Code__c</fullName>
        <externalId>true</externalId>
        <label>CEEB Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Key__c</fullName>
        <description>Specifies the Campaign that should be connected to the Campaign Member created by this Interaction. If available, it uses the Interaction &quot;Campaign Reference ID&quot; field, otherwise it uses the &quot;Campaign Reference ID&quot; from the associated Campaign.</description>
        <formula>IF(ISBLANK(Campaign_Reference_ID__c), Campaign__r.Campaign_Key__c, Campaign_Reference_ID__c)</formula>
        <label>Campaign Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <description>The status that should be set on the Campaign Member created for the Campaign. It must match an available status from the Campaign, and it cannot be blank.</description>
        <inlineHelpText>Select the member status that should be set for the Campaign. It must match an available status from the Campaign.</inlineHelpText>
        <label>Campaign Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Invited</fullName>
                </value>
                <value>
                    <fullName>No Show</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Reference_ID__c</fullName>
        <description>An external ID to match to the Campaign. It must either match an existing campaign&apos;s Campaign Reference ID, or a campaign&apos;s Salesforce ID. If filled out, it populates the Interaction &quot;Campaign Key&quot; formula field.</description>
        <label>Campaign Reference ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The main campaign (event, marketing effort, etc.) connected to this Interaction. When the Campaign Member Status field is also set, a Campaign Member will be created for the individual.</description>
        <inlineHelpText>The main campaign (event, marketing effort, etc.) connected to this Interaction. When the Campaign Member Status field is also set, a Campaign Member will be created for the individual.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>Returns the Career from the Academic Program if there is one, otherwise it returns the Career from the Recruitment Program if there is one.</description>
        <formula>IF(ISBLANK(TEXT( Academic_Program__r.Career__c )),
IF(ISBLANK(TEXT(Recruitment_Program__r.Career__c)), &quot;&quot;, TEXT(Recruitment_Program__r.Career__c)),  
TEXT(Academic_Program__r.Career__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Career</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent_ID__c</fullName>
        <description>The individual&apos;s external ID from another database, used to match on Contact in the Lead and Contact Matching Rules.</description>
        <inlineHelpText>The individual&apos;s external ID from another database.</inlineHelpText>
        <label>Constituent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Account_ID__c</fullName>
        <description>If this Interaction is associated with a Contact, the 18-digit version of that Contact&apos;s Account ID is displayed here. Used by the Interaction Processor.</description>
        <formula>CASESAFEID(Contact__r.AccountId)</formula>
        <inlineHelpText>If this Interaction is associated with a Contact, the 18-digit version of that Contact&apos;s Account ID is displayed here.</inlineHelpText>
        <label>Contact.Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>The individual&apos;s current job title.</description>
        <inlineHelpText>Enter the individual&apos;s current job title.</inlineHelpText>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The contact created or updated by this Interaction, set by the Interaction Processor.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_ACT_Test_Received__c</fullName>
        <description>The date Bethel received the ACT test score.</description>
        <label>Date ACT Test Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The Description of the interaction with the student</description>
        <inlineHelpText>The Description of the interaction with the student</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Values are based on the HEDA Ethnicity field, which matches IPEDS standards.</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic or Latino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>High_School_Graduation_Year__c</fullName>
        <description>The year a student will graduate high school. Populated from RFI forms. Zapier does a lookup to find a term, but this is for reference if it doesn&apos;t find one.</description>
        <label>High School Graduation Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Year_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Intended_Activities__c</fullName>
        <label>Intended Activities</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interaction_Source__c</fullName>
        <description>The method by which the data is being added as an Interaction. Set to &quot;Manual Entry&quot; for hand entry, otherwise it represents the integration source (Webform, Purchase List, etc.) Also used in the Skip Mapping functionality on Interaction Mappings.</description>
        <label>Interaction Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Create</fullName>
                </value>
                <value>
                    <fullName>Manual Entry</fullName>
                    <default>true</default>
                    <label>Manual Entry</label>
                </value>
                <value>
                    <fullName>Purchase List</fullName>
                </value>
                <value>
                    <fullName>Student Information System</fullName>
                </value>
                <value>
                    <fullName>Webform</fullName>
                </value>
                <value>
                    <fullName>Application Submit</fullName>
                </value>
                <value>
                    <fullName>Application Change</fullName>
                </value>
                <value>
                    <fullName>Register</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Family Member Create</fullName>
                </value>
                <value>
                    <fullName>Account Register</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Status__c</fullName>
        <description>When set to &quot;New,&quot; the Interaction Processor runs, then updates the Status based on the result to &quot;Imported&quot; or &quot;Audit Needed.&quot;</description>
        <inlineHelpText>Set the Status to &quot;New&quot; and save to kick off the Interaction process.</inlineHelpText>
        <label>Interaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Audit Required</fullName>
                </value>
                <value>
                    <fullName>Imported</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interaction_Upsert_Key__c</fullName>
        <description>An external ID for upserting Interactions</description>
        <externalId>true</externalId>
        <label>Interaction Upsert Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Legacy__c</fullName>
        <label>Is Legacy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <description>Checked if the Source Number on this Interaction matches the value in the Primary Source Number field on its Opportunity.</description>
        <formula>if( 
Source_Number__c = Opportunity__r.Primary_Source_Number__c,
TRUE, 
FALSE 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Veteran__c</fullName>
        <description>Maps to &quot;Is_Veteran__c&quot; on Contact</description>
        <label>Is Military / Military Benefits</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Choose_Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this record should only result in a Lead. If checked, the process will not attempt to match on Contact.</description>
        <inlineHelpText>Indicates this record should only result in a Lead.</inlineHelpText>
        <label>Lead Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>The way in which the Lead or Contact&apos;s information was first received. Value &quot;Office Visit&quot; is required by the Interactions package tests.</description>
        <inlineHelpText>Indicate the initial source of this data.</inlineHelpText>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Application Change</fullName>
                </value>
                <value>
                    <fullName>Application Create</fullName>
                </value>
                <value>
                    <fullName>Application Submit</fullName>
                </value>
                <value>
                    <fullName>Camps</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Conferences &amp; Fairs</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Event &amp; Visits</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>List &amp; Vendor</fullName>
                </value>
                <value>
                    <fullName>Office Visit</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Registrar</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Transcripts</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lead created or updated by this Interaction, set by the Interaction Processor.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The Location that we got this source from</description>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_Postal_Code__c</fullName>
        <label>Mailing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>